tests/knowledge/testing-accounts-data/account-data-ec2-classic-platform/test/us-east-1/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-0db4f756",
                    "NetworkAclId": "acl-0b9680973179bc607",
                    "SubnetId": "subnet-0db5d2e0e72cc96a6"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-85e4a7de",
                    "NetworkAclId": "acl-0b9680973179bc607",
                    "SubnetId": "subnet-06ccca0b62ab02208"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-9cd093c7",
                    "NetworkAclId": "acl-0b9680973179bc607",
                    "SubnetId": "subnet-0eed74df579bd15c8"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-bfc281e4",
                    "NetworkAclId": "acl-0b9680973179bc607",
                    "SubnetId": "subnet-096ae5ed124af7228"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-3588cb6e",
                    "NetworkAclId": "acl-0b9680973179bc607",
                    "SubnetId": "subnet-0f770a9a2cca5d563"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-c57e3d9e",
                    "NetworkAclId": "acl-0b9680973179bc607",
                    "SubnetId": "subnet-0fa819c8db2fcd182"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-0b9680973179bc607",
            "OwnerId": "111111111111",
            "Tags": [],
            "VpcId": "vpc-014cf9dd2e2b035a9"
        },
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-b223b6e9",
                    "NetworkAclId": "acl-0ae4d377",
                    "SubnetId": "subnet-8443f3e2"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-b723b6ec",
                    "NetworkAclId": "acl-0ae4d377",
                    "SubnetId": "subnet-15c90e24"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-b123b6ea",
                    "NetworkAclId": "acl-0ae4d377",
                    "SubnetId": "subnet-eb1d5ea6"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-b523b6ee",
                    "NetworkAclId": "acl-0ae4d377",
                    "SubnetId": "subnet-9ed36dbf"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-b623b6ed",
                    "NetworkAclId": "acl-0ae4d377",
                    "SubnetId": "subnet-89d7bd87"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-b023b6eb",
                    "NetworkAclId": "acl-0ae4d377",
                    "SubnetId": "subnet-e0f24ebf"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-0ae4d377",
            "OwnerId": "111111111111",
            "Tags": [],
            "VpcId": "vpc-7f11dd02"
        }
    ]
}
