tests/knowledge/testing-accounts-data/account-data-ec2-classic-platform/test/us-east-1/ec2-describe-vpcs.json
{
    "Vpcs": [
        {
            "CidrBlock": "172.31.0.0/16",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-b336efdc",
                    "CidrBlock": "172.31.0.0/16",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-dd5c35a7",
            "InstanceTenancy": "default",
            "IsDefault": true,
            "OwnerId": "111111111111",
            "State": "available",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "default-vpc"
                }
            ],
            "VpcId": "vpc-7f11dd02"
        },
        {
            "CidrBlock": "10.21.112.0/20",
            "CidrBlockAssociationSet": [
                {
                    "AssociationId": "vpc-cidr-assoc-09a127de5d5ea2df7",
                    "CidrBlock": "10.21.112.0/20",
                    "CidrBlockState": {
                        "State": "associated"
                    }
                }
            ],
            "DhcpOptionsId": "dopt-dd5c35a7",
            "InstanceTenancy": "default",
            "IsDefault": false,
            "OwnerId": "111111111111",
            "State": "available",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-tomer-VPC"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-tomer"
                }
            ],
            "VpcId": "vpc-014cf9dd2e2b035a9"
        }
    ]
}
